# Publish-Socials

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  config.py  errors.py  example_usage.py  publish_socials.py  publisher.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: ci.yml
publish_socials_package/: __init__.py  __main__.py  config.py  publish_socials.py  utils.py
tests/: __init__.py  test_config.py  test_errors.py  test_publish_socials.py  test_utils.py
