[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "Publish-Socials"
version = "1.0.0"
description = "Multi-platform social media publishing tool"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "299 Labs", email = "contact@299labs.xyz"}
]
maintainers = [
    {name = "299 Labs", email = "contact@299labs.xyz"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Communications"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]
reddit = [
    "praw>=7.7.0"
]

[project.urls]
Homepage = "https://github.com/299-Labs/Publish-Socials"
Documentation = "https://github.com/299-Labs/Publish-Socials/blob/main/README.md"
Repository = "https://github.com/299-Labs/Publish-Socials"
Issues = "https://github.com/299-Labs/Publish-Socials/issues"
Changelog = "https://github.com/299-Labs/Publish-Socials/releases"

[project.scripts]
publish-socials = "publish_socials_package.__main__:main"

[tool.setuptools.packages.find]
include = ["publish_socials_package*"]

[tool.setuptools.package-data]
publish_socials_package = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["publish_socials_package"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]